packages/typ/tests/fixtures/diagnostics/0055_core_apply_non_function_05.ml
let _ =
  let epsilon = 4 in
  epsilon 5
